deployment/canary-deloyment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-app-canary
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-app
      version: canary
  template:
    metadata:
      labels:
        app: devops-app
        version: canary
    spec:
      containers:
      - name: devops-app
        image: dockerhub-username/devops-app:v2
        ports:
        - containerPort: 5000
